fixed styles and html; filters window is behind park window

--- a/Ecothon.Web/wwwroot/css/_map.scss
+++ b/Ecothon.Web/wwwroot/css/_map.scss
@@ -1,31 +1,13 @@
 @import 'base/var';
 
-.map-container {
-    position: relative;
-    height: 100vh;
-}
 .map {
     position: absolute;
-    width: 100%;
-    height: 100vh;
-    z-index: 1;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
-.map-filters {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    top: 80px;
-    right: 24px;
-    width: 340px;
-    height: calc(100vh - 80px - 24px);
-    z-index: 2;
-    border-radius: 12px;
-    border: 1px solid $color-background-globe;
-    background: $color-background-light;
-    box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.15);
-    padding-bottom: 32px;
-}
 .tags-container {
     display: flex;
     margin-top: 8px;
