--- a/Ecothon.Web/wwwroot/css/_nav.scss
+++ b/Ecothon.Web/wwwroot/css/_nav.scss
@@ -9,7 +9,7 @@
     align-items: center;
     padding-top: 12px;
     padding-bottom: 12px;
-    margin-top: 12px;
+    pointer-events: auto;
 
     .links {
         display: inline-flex;
